# LearningCpp

a_start/: astart.cpp  (+12 more)
picture_process/: CMakeLists.txt  basicOperation.cpp  basicOperation.h  edgeDetection.cpp  edgeDetection.h  histogramEqualize.cpp  histogramEqualize.h  main.cpp  main_old.cpp  outlineExtraction.cpp  outlineExtraction.h  perspective_transform.cpp  perspective_transform.h  read_write_bmp.cpp  read_write_bmp.h  spatialFilter.cpp  splitBmp.cpp  splitBmp.h  threshold.cpp
picture_process/1/: HoughTransform.h  basicOperation.cpp  basicOperation.h  histogramEqualize.cpp  histogramEqualize.h  main.cpp  outlineExtraction.h  pub.h  read_write_bmp.cpp  read_write_bmp.h  regionGrowing.h  splitBmp.cpp  splitBmp.h  threshold.cpp
picture_process/config/: clean_terminal.txt  not_dev.txt  shutdown_system.txt  user_input.txt  user_interface.txt  welcome_sweet_system.txt
picture_process/config/homework/: no_task.txt  task_000.txt  task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt
picture_process/config/info/: split_green_picture.txt  split_red_picture.txt
picture_process/new_version/: bitmapQuad.h  create.cpp  green_image.pgm  kk.cpp  new_ll.cpp  other.cpp  pp  ppp.cpp  red_image.pgm
picture_process/src/cases/cases_001/: running_001.cpp
picture_process/src/common/: histogramEqualize.h  perspective_transform.h  spatialFilter.cpp  spatialFilter.h  splitBmp.cpp  threshold.h
picture_process/src/tools/: get_root_path.cpp  get_root_path.h
picture_process/test_by_cv/: pp.py  pppp.py
(+73 files in other folders)
